all-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
  namespace: microservices-tekton
spec:
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/adservice:v0.6.0
        ports:
        - containerPort: 9555
        resources:
          requests:
            cpu: 200m
            memory: 180Mi
          limits:
            cpu: 300m
            memory: 300Mi
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 15
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:9555"]
        livenessProbe:
          initialDelaySeconds: 20
          periodSeconds: 15
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:9555"]
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
  namespace: microservices-tekton
spec:
  selector:
    app: adservice
  ports:
  - name: grpc
    port: 9555
    targetPort: 9555

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: adservice
  namespace: microservices-tekton
  labels: {}
spec:
  to:
    kind: Service
    name: adservice
  tls: null
  path: /
  port:
    targetPort: grpc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  namespace: microservices-tekton
spec:
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/cartservice:v0.6.0
        ports:
        - containerPort: 7070
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 128Mi
        readinessProbe:
          initialDelaySeconds: 15
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7070", "-rpc-timeout=5s"]
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 10
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7070", "-rpc-timeout=5s"]
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  namespace: microservices-tekton
spec:
  selector:
    app: cartservice
  ports:
  - name: grpc
    port: 7070
    targetPort: 7070

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cartservice
  namespace: microservices-tekton
  labels: {}
spec:
  to:
    kind: Service
    name: cartservice
  tls: null
  path: /
  port:
    targetPort: grpc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
  namespace: microservices-tekton
spec:
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      serviceAccountName: default
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.6.0
          ports:
          - containerPort: 5050
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5050"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5050"]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  namespace: microservices-tekton
spec:
  selector:
    app: checkoutservice
  ports:
  - name: grpc
    port: 5050
    targetPort: 5050

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: checkoutservice
  namespace: microservices-tekton
  labels: {}
spec:
  to:
    kind: Service
    name: checkoutservice
  tls: null
  path: /
  port:
    targetPort: grpc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
  namespace: microservices-tekton
spec:
  selector:
    matchLabels:
      app: currencyservice
  template:
    metadata:
      labels:
        app: currencyservice
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/currencyservice:v0.6.0
        ports:
        - name: grpc
          containerPort: 7000
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7000"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7000"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
  namespace: microservices-tekton
spec:
  type: ClusterIP
  selector:
    app: currencyservice
  ports:
  - name: grpc
    port: 7000
    targetPort: 7000
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: currencyservice
  namespace: microservices-tekton
  labels: {}
spec:
  to:
    kind: Service
    name: currencyservice
  tls: null
  path: /
  port:
    targetPort: grpc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
  namespace: microservices-tekton
spec:
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/emailservice:v0.6.0
        ports:
        - containerPort: 8080
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  namespace: microservices-tekton
spec:
  selector:
    app: emailservice
  ports:
  - name: grpc
    port: 5000
    targetPort: 8080
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: emailservice
  namespace: microservices-tekton
  labels: {}
spec:
  to:
    kind: Service
    name: emailservice
  tls: null
  path: /
  port:
    targetPort: grpc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: microservices-tekton
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: default
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/frontend:v0.6.0
          ports:
          - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-readiness-probe"
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-liveness-probe"
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: microservices-tekton
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontendservice
  namespace: microservices-tekton
  labels: {}
spec:
  to:
    kind: Service
    name: frontend
  tls: null
  path: /
  port:
    targetPort: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  namespace: microservices-tekton
spec:
  selector:
    matchLabels:
      app: loadgenerator
  replicas: 1
  template:
    metadata:
      labels:
        app: loadgenerator
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      containers:
      - name: main
        image: gcr.io/google-samples/microservices-demo/loadgenerator:v0.6.0
        resources:
          requests:
            cpu: 300m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  namespace: microservices-tekton
spec:
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/paymentservice:v0.6.0
        ports:
        - containerPort: 50051
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  namespace: microservices-tekton
spec:
  selector:
    app: paymentservice
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: paymentservice
  namespace: microservices-tekton
  labels: {}
spec:
  to:
    kind: Service
    name: paymentservice
  tls: null
  path: /
  port:
    targetPort: grpc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
  namespace: microservices-tekton
spec:
  selector:
    matchLabels:
      app: productcatalogservice
  template:
    metadata:
      labels:
        app: productcatalogservice
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/productcatalogservice:v0.6.0
        ports:
        - containerPort: 3550
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:3550"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:3550"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
  namespace: microservices-tekton
spec:
  selector:
    app: productcatalogservice
  ports:
  - name: grpc
    port: 3550
    targetPort: 3550

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: productcatalogservice
  namespace: microservices-tekton
  labels: {}
spec:
  to:
    kind: Service
    name: productcatalogservice
  tls: null
  path: /
  port:
    targetPort: grpc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
  namespace: microservices-tekton
spec:
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/recommendationservice:v0.6.0
        ports:
        - containerPort: 8080
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        resources:
          requests:
            cpu: 100m
            memory: 220Mi
          limits:
            cpu: 200m
            memory: 450Mi
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  namespace: microservices-tekton
spec:
  selector:
    app: recommendationservice
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: recommendationservice
  namespace: microservices-tekton
  labels: {}
spec:
  to:
    kind: Service
    name: recommendationservice
  tls: null
  path: /
  port:
    targetPort: grpc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart
  namespace: microservices-tekton
spec:
  selector:
    matchLabels:
      app: redis-cart
  template:
    metadata:
      labels:
        app: redis-cart
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
        resources:
          limits:
            memory: 256Mi
            cpu: 125m
          requests:
            cpu: 70m
            memory: 200Mi
      volumes:
      - name: redis-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
  namespace: microservices-tekton
spec:
  type: ClusterIP
  selector:
    app: redis-cart
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: 6379
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: redis-cart
  namespace: microservices-tekton
  labels: {}
spec:
  to:
    kind: Service
    name: redis-cart
  tls: null
  path: /
  port:
    targetPort: tcp-redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
  namespace: microservices-tekton
spec:
  selector:
    matchLabels:
      app: shippingservice
  template:
    metadata:
      labels:
        app: shippingservice
    spec:
      serviceAccountName: default
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/shippingservice:v0.6.0
        ports:
        - containerPort: 50051
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
  namespace: microservices-tekton
spec:
  type: ClusterIP
  selector:
    app: shippingservice
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: shippingservice
  namespace: microservices-tekton
  labels: {}
spec:
  to:
    kind: Service
    name: shippingservice
  tls: null
  path: /
  port:
    targetPort: grpc
