frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  #namespace: 
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: default
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/frontend:v0.6.0
          ports:
          - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-readiness-probe"
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/_healthz"
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-liveness-probe"
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  #namespace:
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontendservice
  #namespace: 
  labels: {}
spec:
  to:
    kind: Service
    name: frontend
  tls: null
  path: /
  port:
    targetPort: http
