paymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  #namespace:  
spec:
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/paymentservice:v0.6.0
        ports:
        - containerPort: 50051
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  #namespace:  
spec:
  selector:
    app: paymentservice
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: paymentservice
  #namespace: 
  labels: {}
spec:
  to:
    kind: Service
    name: paymentservice
  tls: null
  path: /
  port:
    targetPort: grpc
