redis-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart
  #namespace: 
spec:
  selector:
    matchLabels:
      app: redis-cart
  template:
    metadata:
      labels:
        app: redis-cart
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
        resources:
          limits:
            memory: 256Mi
            cpu: 125m
          requests:
            cpu: 70m
            memory: 200Mi
      volumes:
      - name: redis-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
  #namespace: 
spec:
  type: ClusterIP
  selector:
    app: redis-cart
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: 6379
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: redis-cart
  #namespace: 
  labels: {}
spec:
  to:
    kind: Service
    name: redis-cart
  tls: null
  path: /
  port:
    targetPort: tcp-redis
